CTA: Clear Floats to Prevent Overflow

--- a/widgets/cta/styles/default.less
+++ b/widgets/cta/styles/default.less
@@ -134,4 +134,10 @@
 			}
 		}
 	}
+
+	.sow-cta-wrapper::after {
+		clear: both;
+		content: "";
+		display: table;
+	}
 }
